feat: add rename of Application module to application